<?xml version="1.0"?>
<package>
  <name>zaryabot_rqt</name>
  <version>0.1.0</version>
  <description>
    The zaryabot_rqt package provides GUI with rqt-plugin for the ZaryaBot ROS visualize tool.
  </description>

  <maintainer email="a0919958057@gmail.com">YE Cheng-Wei</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/a0919958057/tdk-zarya-robot/wiki</url>
  <url type="repository">https://github.com/a0919958057/tdk-zarya-robot</url>
  <url type="bugtracker">https://github.com/a0919958057/tdk-zarya-robot/issues</url>

  <author email="a0919958057@gmail.com">YE Cheng-Wei</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>


</package>
